modulo-04-gestion-apps-redes/ejercicios/redes/07-ingress-host/manifests/solution/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 5678
